# daily-stonks-clean

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  bootstrap_dailystonks_delivery.py
.github/: pull_request_template.md
dailystonks-delivery/: .gitignore  README.md  docker-compose.yml  pytest.ini  (+2 more)
dailystonks/engine/: README.md  pyproject.toml  requirements.txt
dailystonks/engine/config/: slots.yaml  tiers.yaml
dailystonks/engine/dailystonks/: __init__.py  __main__.py
dailystonks/engine/dailystonks/cards/: __init__.py  alerts.py  anomaly.py  backtest_lite.py  backtests.py  basics_extra.py  cluster.py  dashboards.py  events_gap_watch.py  exposure_pack.py  filters.py  flagship_pack.py  flagship_pack2.py  flagship_pack4.py  forecast.py  forecast_extras.py  headline_risk_dashboard.py  labels.py  macro.py  market_internals_pack.py  micro_pack.py  momentum_pack.py  narrative.py  options.py  options_lite.py  pairs.py  patterns.py  portfolio.py  price.py  rates_pack.py  regime.py  regime_backtests.py  regime_extras.py  reversal.py  risk.py  risk_extras.py  scenario_pack.py  screeners.py  seasonality_cards.py  sector_income_multi.py  (+5 more)
dailystonks/engine/dailystonks/core/: models.py  registry.py  rosters.py  runner.py  selector.py  utils.py
dailystonks/engine/dailystonks/data/: marketdata.py  sp500.py
dailystonks/engine/dailystonks/render/: html.py  plotting.py
dailystonks/engine/scripts/: preview_roster.py  run_black_live.ps1  run_black_offline.ps1  run_daily_rosters.py  run_report.py  smoke_rosters.py  smoke_test_offline.py
(+45 files in other folders)
